[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guffin"
version = "0.1.0"
description = "Markdown utilities for working with Roam Research exports"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "panflute>=2.3",
    "pydantic>=2.0",
    "pypandoc>=1.17",
    "requests>=2.31.0",
    "rich>=13.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pyright>=1.1",
    "pydocstringformatter>=0.7",
    "ruff>=0.4",
    "hatch>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
dump-roam-tree = "guffin.dump_roam_tree:app"
export-roam-tree = "guffin.export_roam_tree:app"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
check = [
    "pydocstringformatter --write src/",
    "black .",
    "ruff check --fix src/ tests/",
    "pyright",
    "pytest",
]

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "D",     # pydocstyle
    "E501",  # line too long
    "F401",  # unused imports
    "UP",    # pyupgrade — enforce modern Python idioms
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydocstringformatter]
style = ["pep257"]
max-line-length = 120
linewrap-full-docstring = true
split-summary-body = true

[tool.pyright]
include = ["src"]
exclude = [".venv", "tests"]
extraPaths = ["tests", "src"]
typeCheckingMode = "strict"
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live: requires external dependencies (e.g. Roam Desktop app running locally)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] (%(module)s.%(funcName)s:%(lineno)d) %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
